add alt text to *2.gif on all recipes pages

--- a/recipes/gyoza.html
+++ b/recipes/gyoza.html
@@ -6,6 +6,6 @@
 </head>
 <body>
     <h1>Gyoza Recipe</h1>
-    <img src="../images/gyoza/g2.gif"
+    <img src="../images/gyoza/g2.gif" alt="half eaten gyoza on a chopstick">
 </body>
 </html>
