--- a/recipes/tamagoyaki.html
+++ b/recipes/tamagoyaki.html
@@ -6,6 +6,6 @@
 </head>
 <body>
     <h1>Tamagoyaki Recipe</h1>
-    <img src="../images/tamagoyaki/t2.gif"
+    <img src="../images/tamagoyaki/t2.gif" alt="tamagoyaki being picked up with chopsticks">
 </body>
 </html>
