--- a/recipes/miso.html
+++ b/recipes/miso.html
@@ -6,6 +6,6 @@
 </head>
 <body>
     <h1>Miso Soup Recipe</h1>
-    <img src="../images/miso/m2.gif"
+    <img src="../images/miso/m2.gif" alt="miso soup stirred in a big pot">
 </body>
 </html>
