--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <title>Odin Recipes</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <h1><ins>Odin Recipes</ins></h1>
+    <ul>
+        <li><h2><em>Gyoza</em></h2></li>
+        <a href="./recipes/gyoza.html"> 
+            <img src="./images/gyoza/g1.gif" alt="soy sauce being poured over a crispy row of gyoza">
+        </a>
+    </ul>
 </body>
 </html>
