add miso to main page

--- a/index.html
+++ b/index.html
@@ -7,9 +7,17 @@
 <body>
     <h1><ins>Odin Recipes</ins></h1>
     <ul>
-        <li><h2><em>Gyoza</em></h2></li>
+        <li>
+            <h2><em>Gyoza</em></h2>
+        </li>
         <a href="./recipes/gyoza.html"> 
             <img src="./images/gyoza/g1.gif" alt="soy sauce being poured over a crispy row of gyoza">
+        </a>
+        <li>
+            <h2><em>Miso Soup</em></h2>
+        </li>
+        <a href="recipes/miso.html">
+            <img src="./images/miso/m1.gif" alt="miso soup with hot water being added with kettle">
         </a>
     </ul>
 </body>
