--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
         <a href="recipes/miso.html">
             <img src="./images/miso/m1.gif" alt="miso soup with hot water being added with kettle">
         </a>
+        <li>
+            <h2><em>Tamagoyaki</em></h2>
+        </li>
+        <a href="./recipes/tamagoyaki.html">
+            <img src="./images/tamagoyaki/t1.gif" alt="chopstick picking up half of a tamagoyaki">
+        </a>
     </ul>
 </body>
 </html>
