--- a/recipes/gyoza.html
+++ b/recipes/gyoza.html
@@ -7,5 +7,9 @@
 <body>
     <h1>Gyoza Recipe</h1>
     <img src="../images/gyoza/g2.gif" alt="half eaten gyoza on a chopstick">
+    <h3>Best dang gyoza you'll ever put in your mouth!</h3>
+    <p>
+        There's nothing worse than a soggy gyoza. I mean, what's the point of them being called pot stickers when the bottom never stuck? I like me some <em><strong>cwispy</strong></em> and <strong><em>moist</em></strong> gyoza and in this recipe I'll show you how to do it!
+    </p>
 </body>
 </html>
