add description to gyoza page

--- a/recipes/gyoza.html
+++ b/recipes/gyoza.html
@@ -11,5 +11,24 @@
     <p>
         There's nothing worse than a soggy gyoza. I mean, what's the point of them being called pot stickers when the bottom never stuck? I like me some <em><strong>cwispy</strong></em> and <strong><em>moist</em></strong> gyoza and in this recipe I'll show you how to do it!
     </p>
+    <h3>What you'll need:</h3>
+    <ul>
+        <h4>For the Dumplings</h4>
+        <li>1 tsp black pepper</li>
+        <li>4 Tbsp of diced garlic</li>
+        <li>2 Tbsp ginger paste</li>
+        <li>1/2 tsp salt</li>
+        <li>1lb ground pork (preferably not lean)</li>
+        <li>1 tsp sesame oil</li>
+        <li>1 1/2 Tbsp soy sauce</li>
+        <li>1 1/2 tsp magic sarap (or dashi powder)</li>
+        <li>2 tsp sugar</li>
+        <li>1 Tbsp cornstarch</li>
+        <li>1 package dumpling wrappers</li>
+        <h4>For the Dipping Sauce</h4>
+        <li>1 Tbsp soy sauce</li>
+        <li>2 Tbsp white vinegar</li>
+        <li>1 tsp sesame seeds</li>
+    </ul>
 </body>
 </html>
