add steps to gyoza page

--- a/recipes/gyoza.html
+++ b/recipes/gyoza.html
@@ -50,5 +50,6 @@
         <li>Turn the heat down to medium and add about ¼ cup of water (it will splatter) and then close the pan with a tight fitting lid. Steam for about 3 minutes (5 mins if cooking from frozen) until cooked through. I like to use an "instant read" thermometer to check doneness, and I'm going for an internal temp of 160°F minimum.</li>
         <li>Once done, you can either use tongs to arrange them on a plate, OR if you're fancy, you can put a plate upside down on top of them pan and flip the whole pan onto the plate and serve the dumplings crispy side up. Just be quick and confident when you flip!</li>
     </ol>
+    <h2>Bon Apetite! Hope you enjoyed this gyoza recipe!</h2>
 </body>
 </html>
