add description to miso page

--- a/recipes/miso.html
+++ b/recipes/miso.html
@@ -7,5 +7,9 @@
 <body>
     <h1>Miso Soup Recipe</h1>
     <img src="../images/miso/m2.gif" alt="miso soup stirred in a big pot">
+    <h3>Perfectly Balanced Miso Soup</h3>
+    <p>
+        Ahhh yes, miso soup: the start of a wonderful Japanese meal (unless you chose salad, and if you did that sucks because you're missing out on a warm bowl of delicious probiotics.) Coffee shops are judged based on their espresso shots, southern restaurants are judged on their sweet tea, and for Japanese restaurants, I'd argue that they're judged on the quality of their miso soup. In this recipe, I'll show you how to make miso soup just like how they make it at your favorite sushi spot. You'll be surprised to see how simple it is to make!
+    </p>
 </body>
 </html>
