--- a/recipes/miso.html
+++ b/recipes/miso.html
@@ -11,5 +11,14 @@
     <p>
         Ahhh yes, miso soup: the start of a wonderful Japanese meal (unless you chose salad, and if you did that sucks because you're missing out on a warm bowl of delicious probiotics.) Coffee shops are judged based on their espresso shots, southern restaurants are judged on their sweet tea, and for Japanese restaurants, I'd argue that they're judged on the quality of their miso soup. In this recipe, I'll show you how to make miso soup just like how they make it at your favorite sushi spot. You'll be surprised to see how simple it is to make!
     </p>
+    <h3>What you'll need:</h3>
+    <ul>
+        <li>4 cups of boiling water</li>
+        <li>dashi stock</li>
+        <li>soft tofu</li>
+        <li>red miso paste</li>
+        <li>1 Tbsp dried wakame seaweed</li>
+        <li>1 green onion</li>
+    </ul>
 </body>
 </html>
