add steps to miso page

--- a/recipes/miso.html
+++ b/recipes/miso.html
@@ -20,5 +20,19 @@
         <li>1 Tbsp dried wakame seaweed</li>
         <li>1 green onion</li>
     </ul>
+    <h3>Let's get started!</h3>
+    <ul>
+        <h4>For the dashi stock</h4>
+        <ol>
+            <li>Follow the instructions from the manufacterer to mix in the right amount of dashi powder to create 4 cups of dashi stock</li>
+            <li>Mix 4 cups of boiling water with dashi stock until fully dissolved. Turn heat to low.</li>
+        </ol>
+        <h4>To make the miso soup</h4>
+        <ol>
+            <li>Add around 4-5 Tbsp of miso paste to your dashi stock. Make sure to use a small strainer to slowly incorporate it into the stock.<stron><em>Do not add all of it at once.</em></stron></li>
+            <li>After all of the miso is fully dissolved, cut the heat and add your cubed tofu, wakame, and green onion.</li>
+        </ol>
+    </ul>
+    <h3>Taadaaaa!! Wasn't that easy? Hope you enjoyed this simple recipe!</h3>
 </body>
 </html>
