add description to tamagoyaki page

--- a/recipes/tamagoyaki.html
+++ b/recipes/tamagoyaki.html
@@ -7,5 +7,9 @@
 <body>
     <h1>Tamagoyaki Recipe</h1>
     <img src="../images/tamagoyaki/t2.gif" alt="tamagoyaki being picked up with chopsticks">
+    <h3>A recipe even my dog can follow</h3>
+    <p>
+        This is the most simple recipe out there. It's just as easy as making rice in a rice cooker but takes 5 minutes max(curse those fancy rice makers that take 45 minutes to cook). 
+    </p>
 </body>
 </html>
