add ingredients to tamagoyaki page

--- a/recipes/tamagoyaki.html
+++ b/recipes/tamagoyaki.html
@@ -11,5 +11,11 @@
     <p>
         This is the most simple recipe out there. It's just as easy as making rice in a rice cooker but takes 5 minutes max(curse those fancy rice makers that take 45 minutes to cook). 
     </p>
+    <h3>What you'll need:</h3>
+    <ul>
+        <li>1 large egg</li>
+        <li>1/4 tsp dashi powder</li>
+        <li>1 tsp vegetable oil</li>
+    </ul>
 </body>
 </html>
