add steps to tamagoyaki page

--- a/recipes/tamagoyaki.html
+++ b/recipes/tamagoyaki.html
@@ -15,7 +15,16 @@
     <ul>
         <li>1 large egg</li>
         <li>1/4 tsp dashi powder</li>
-        <li>1 tsp vegetable oil</li>
+        <li>1 tsp vegetable oil</li>tatus
     </ul>
+    <h3>Let's get started!</h3>
+    <ol>
+        <li>Beat the egg and add in the dashi powder.</li>
+        <li><em><strong>Make sure to use a square pan to create a crisp edge.</strong></em>Preheat your pan on low medium heat.</li>
+        <li>Add your oil into a ramuken and use a folded paper towel along with a pair of chopsticks or tongs to evenly saturate the pan with a light coat of oil.</li>
+        <li>Pour a small amount of your egg mixture to the pan. <em><strong>Keep the layer light and thin so it folds easily.</strong></em></li>
+        <li>The best way to fold the egg into a roll is by using two spatulas: one to keep the egg in place and the other to do the actual folding over. Keep folding until it's in the shape of a log and push to one side of the pan. Repeat steps 3-5 until you use up all the egg mixture.</li>
+    </ol>
+    <h3>That simple! The technique might be tricky at first but you'll be a tamagoyaki master in no time!</h3>
 </body>
 </html>
