add *3.gif to all recipes pages

--- a/recipes/gyoza.html
+++ b/recipes/gyoza.html
@@ -51,5 +51,6 @@
         <li>Once done, you can either use tongs to arrange them on a plate, OR if you're fancy, you can put a plate upside down on top of them pan and flip the whole pan onto the plate and serve the dumplings crispy side up. Just be quick and confident when you flip!</li>
     </ol>
     <h2>Bon Apetite! Hope you enjoyed this gyoza recipe!</h2>
+    <img src="../images/gyoza/g3.gif" alt="wrapping uncooked gyoza filling into a dumpling wrapper">
 </body>
 </html>
