--- a/recipes/miso.html
+++ b/recipes/miso.html
@@ -34,5 +34,6 @@
         </ol>
     </ul>
     <h3>Taadaaaa!! Wasn't that easy? Hope you enjoyed this simple recipe!</h3>
+    <img src="../images/miso/m3.gif">
 </body>
 </html>
