--- a/recipes/tamagoyaki.html
+++ b/recipes/tamagoyaki.html
@@ -26,5 +26,6 @@
         <li>The best way to fold the egg into a roll is by using two spatulas: one to keep the egg in place and the other to do the actual folding over. Keep folding until it's in the shape of a log and push to one side of the pan. Repeat steps 3-5 until you use up all the egg mixture.</li>
     </ol>
     <h3>That simple! The technique might be tricky at first but you'll be a tamagoyaki master in no time!</h3>
+    <img src="../images/tamagoyaki/t3.gif" alt="cooking tamagoyaki on a square pan">
 </body>
 </html>
