--- a/recipes/miso.html
+++ b/recipes/miso.html
@@ -29,11 +29,13 @@
         </ol>
         <h4>To make the miso soup</h4>
         <ol>
+            <li>Prep your green onions by cleaning and cutting into small pieces.</li>
+            <li>Prep your tofu by cutting it into cubes.</li>
             <li>Add around 4-5 Tbsp of miso paste to your dashi stock. Make sure to use a small strainer to slowly incorporate it into the stock.<stron><em>Do not add all of it at once.</em></stron></li>
             <li>After all of the miso is fully dissolved, cut the heat and add your cubed tofu, wakame, and green onion.</li>
         </ol>
     </ul>
     <h3>Taadaaaa!! Wasn't that easy? Hope you enjoyed this simple recipe!</h3>
-    <img src="../images/miso/m3.gif">
+    <img src="../images/miso/m3.gif" alt="mixing miso paste into a boiling soup">
 </body>
 </html>
