add css to index page

--- a/index.html
+++ b/index.html
@@ -3,27 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="styles.css"
 </head>
 <body>
-    <h1><ins>Odin Recipes</ins></h1>
-    <ul>
-        <li>
-            <h2><em>Gyoza</em></h2>
-        </li>
+    <div id="title">ODIN RECIPES</div>
+    <div class="food">Gyoza</div>
+    <p></p>
         <a href="./recipes/gyoza.html"> 
-            <img src="./images/gyoza/g1.gif" alt="soy sauce being poured over a crispy row of gyoza">
+            <img src="./images/gyoza/g1.gif" alt="soy sauce being poured over a crispy row of gyoza" class="center">
         </a>
-        <li>
-            <h2><em>Miso Soup</em></h2>
-        </li>
+    <p></p>
+    <div class="food">Miso Soup</div>
+    <p></p>
         <a href="recipes/miso.html">
-            <img src="./images/miso/m1.gif" alt="miso soup with hot water being added with kettle">
+            <img src="./images/miso/m1.gif" alt="miso soup with hot water being added with kettle" class="center">
         </a>
-        <li>
-            <h2><em>Tamagoyaki</em></h2>
-        </li>
+    <p></p>
+    <div class="food">Tamagoyaki</div>
+    <p></p>
         <a href="./recipes/tamagoyaki.html">
-            <img src="./images/tamagoyaki/t1.gif" alt="chopstick picking up half of a tamagoyaki">
+            <img src="./images/tamagoyaki/t1.gif" alt="chopstick picking up half of a tamagoyaki" class="center">
         </a>
     </ul>
 </body>
