add css to gyoza page

--- a/recipes/gyoza.html
+++ b/recipes/gyoza.html
@@ -3,17 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>Gyoza Recipe</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
-    <h1>Gyoza Recipe</h1>
-    <img src="../images/gyoza/g2.gif" alt="half eaten gyoza on a chopstick">
-    <h3>Best dang gyoza you'll ever put in your mouth!</h3>
+    <div id="title">Gyoza Recipe</div>
+    <img src="../images/gyoza/g2.gif" alt="half eaten gyoza on a chopstick" class="center">
+    <p></p>
+    <div class="food recipe">Best dang gyoza you'll ever put in your mouth!</div>
     <p>
         There's nothing worse than a soggy gyoza. I mean, what's the point of them being called pot stickers when the bottom never stuck? I like me some <em><strong>cwispy</strong></em> and <strong><em>moist</em></strong> gyoza and in this recipe I'll show you how to do it!
     </p>
-    <h3>What you'll need:</h3>
+    <div class="food recipe instructions">What you'll need:</div>
     <ul>
-        <h4>For the Dumplings</h4>
+        <p class="large">For the Dumplings</p>
         <li>1 tsp black pepper</li>
         <li>4 Tbsp of diced garlic</li>
         <li>2 Tbsp ginger paste</li>
@@ -25,12 +27,12 @@
         <li>2 tsp sugar</li>
         <li>1 Tbsp cornstarch</li>
         <li>1 package dumpling wrappers</li>
-        <h4>For the Dipping Sauce</h4>
+        <p class="large">For the Dipping Sauce</p>
         <li>1 Tbsp soy sauce</li>
         <li>2 Tbsp white vinegar</li>
         <li>1 tsp sesame seeds</li>
     </ul>
-    <h3>Lets Get Started!</h3>
+    <div class="food recipe instructions">Lets Get Started!</div>
     <ol>
         <li>Separate the white and green part of napa cabbage leaves. Finely dice the white "stems" and finely chop the leaves, keeping them separate.</li>
         <li>In a large skillet over medium heat, add a tablespoon of oil as well as your garlic,ginger, and black pepper. Saute until aromatic; about 2 minutes. </li>
@@ -43,14 +45,16 @@
         <li>If you're not cooking them right away, freeze them immediately. Do not wrap and let them sit unfrozen for any longer than a couple of hours.</li>
         <li>Mix together the dipping sauce before you start cooking so it'll be ready.</li>
     </ol>
-    <h3>Cook the Dumplings!</h3>
+    <p class="large">Cook the Dumplings!</p>
     <ol>
         <li>In a nonstick skillet (or a well-seasoned cast-iron pa), add a little oil to thinly but thoroughly coat the bottom. Turn the heat on to medium high, and without waiting for the pan to get hot, go ahead and arrange the dumplings on the pan in a circular pattern. You can pack them pretty close together and fill the pan completely, but not so much that they are squished.</li>
         <li>Fry the dumplings for about 3-5 minutes or until the bottoms are well browned.</li>
         <li>Turn the heat down to medium and add about ¼ cup of water (it will splatter) and then close the pan with a tight fitting lid. Steam for about 3 minutes (5 mins if cooking from frozen) until cooked through. I like to use an "instant read" thermometer to check doneness, and I'm going for an internal temp of 160°F minimum.</li>
         <li>Once done, you can either use tongs to arrange them on a plate, OR if you're fancy, you can put a plate upside down on top of them pan and flip the whole pan onto the plate and serve the dumplings crispy side up. Just be quick and confident when you flip!</li>
     </ol>
-    <h2>Bon Apetite! Hope you enjoyed this gyoza recipe!</h2>
-    <img src="../images/gyoza/g3.gif" alt="wrapping uncooked gyoza filling into a dumpling wrapper">
+    <div class="food recipe">Bon Apetite! Hope you enjoyed this gyoza recipe!</div>
+    <p>
+    </p>
+    <img src="../images/gyoza/g3.gif" alt="wrapping uncooked gyoza filling into a dumpling wrapper" class="center">
 </body>
 </html>
