add css to miso page

--- a/recipes/miso.html
+++ b/recipes/miso.html
@@ -3,15 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Miso Soup Recipe</title>
+    <link rel="stylesheet" href="../styles.css"
 </head>
 <body>
-    <h1>Miso Soup Recipe</h1>
-    <img src="../images/miso/m2.gif" alt="miso soup stirred in a big pot">
-    <h3>Perfectly Balanced Miso Soup</h3>
+    <div id="title">Miso Soup Recipe</div>
+    <img src="../images/miso/m2.gif" alt="miso soup stirred in a big pot" class="center">
+    <p></p>
+    <div class="food recipe">Perfectly Balanced Miso Soup</div>
     <p>
         Ahhh yes, miso soup: the start of a wonderful Japanese meal (unless you chose salad, which if you did that sucks because you're missing out on a warm bowl of delicious probiotics.) Coffee shops are judged based on their espresso shots, southern restaurants are judged based on their sweet tea, and as for Japanese restaurants, I'd argue that they're judged based on the quality of their miso soup. In this recipe, I'll show you how to make miso soup just like how they make it at your favorite sushi spot. You'll be surprised at how simple it is to make!
     </p>
-    <h3>What you'll need:</h3>
+    <div class="food recipe intructions">What you'll need:</div>
     <ul>
         <li>4 cups of boiling water</li>
         <li>dashi stock</li>
@@ -20,14 +22,14 @@
         <li>1 Tbsp dried wakame seaweed</li>
         <li>1 green onion</li>
     </ul>
-    <h3>Let's get started!</h3>
+    <div class="food recipe instructions">Let's get started!</div>
     <ul>
-        <h4>For the dashi stock</h4>
+        <p class="large">For the dashi stock</p>
         <ol>
             <li>Follow the instructions from the manufacterer to mix in the right amount of dashi powder to create 4 cups of dashi stock</li>
             <li>Mix 4 cups of boiling water with dashi stock until fully dissolved. Turn heat to low.</li>
         </ol>
-        <h4>To make the miso soup</h4>
+        <p class="large">To make the miso soup</p>
         <ol>
             <li>Prep your green onions by cleaning and cutting into small pieces.</li>
             <li>Prep your tofu by cutting it into cubes.</li>
@@ -35,7 +37,8 @@
             <li>After all of the miso is fully dissolved, cut the heat and add your cubed tofu, wakame, and green onion.</li>
         </ol>
     </ul>
-    <h3>Taadaaaa!! Wasn't that easy? Hope you enjoyed this simple recipe!</h3>
+    <div class="food recipe instructions">Taadaaaa!! Wasn't that easy? Hope you enjoyed this simple recipe!</div>
+    <p></p>
     <img src="../images/miso/m3.gif" alt="mixing miso paste into a boiling soup">
 </body>
 </html>
