add css to tamagoyaki page

--- a/recipes/tamagoyaki.html
+++ b/recipes/tamagoyaki.html
@@ -3,21 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <title>Tamagoyaki Recipe</title>
+    <link rel="stylesheet" href="../styles.css"
 </head>
 <body>
-    <h1>Tamagoyaki Recipe</h1>
-    <img src="../images/tamagoyaki/t2.gif" alt="tamagoyaki being picked up with chopsticks">
-    <h3>A recipe even my dog can follow</h3>
+    <div id="title">Tamagoyaki Recipe</div>
+    <img src="../images/tamagoyaki/t2.gif" alt="tamagoyaki being picked up with chopsticks" class="center">
+    <p></p>
+    <div class="food recipe instructions">A recipe even my dog can follow</div>
     <p>
         This is the most simple recipe out there. It's just as easy as making rice in a rice cooker but takes 5 minutes max(curse those fancy rice makers that take 45 minutes to cook). 
     </p>
-    <h3>What you'll need:</h3>
+    <div class="food recipe instructions">What you'll need:</div>
     <ul>
         <li>1 large egg</li>
         <li>1/4 tsp dashi powder</li>
         <li>1 tsp vegetable oil</li>tatus
     </ul>
-    <h3>Let's get started!</h3>
+    <div class="food recipe instructions">Let's get started!</div>
     <ol>
         <li>Beat the egg and add in the dashi powder.</li>
         <li><em><strong>Make sure to use a square pan to create a crisp edge.</strong></em>Preheat your pan on low medium heat.</li>
@@ -25,7 +27,8 @@
         <li>Pour a small amount of your egg mixture to the pan. <em><strong>Keep the layer light and thin so it folds easily.</strong></em></li>
         <li>The best way to fold the egg into a roll is by using two spatulas: one to keep the egg in place and the other to do the actual folding over. Keep folding until it's in the shape of a log and push to one side of the pan. Repeat steps 3-5 until you use up all the egg mixture.</li>
     </ol>
-    <h3>That simple! The technique might be tricky at first but you'll be a tamagoyaki master in no time!</h3>
-    <img src="../images/tamagoyaki/t3.gif" alt="cooking tamagoyaki on a square pan">
+    <div class="food recipe instructions">That simple! The technique might be tricky at first but you'll be a tamagoyaki master in no time!</div>
+    <p></p>
+    <img src="../images/tamagoyaki/t3.gif" alt="cooking tamagoyaki on a square pan" class="center">
 </body>
 </html>
